tests/baselines/reference/assignmentCompatability40.errors.txt
==== tests/cases/compiler/assignmentCompatability40.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export           class classWithPrivate<T> { constructor(private one: T) {} }                       var x5 = new classWithPrivate(1);;
        export var __val__x5 = x5;
    }
    __test2__.__val__x5 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability40.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to '__test2__.classWithPrivate<number>':
!!! 	Property 'one' defined as public in type '__test1__.interfaceWithPublicAndOptional<T, U>' is defined as private in type '__test2__.classWithPrivate<T>'.